--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^4.3.1",
+    "browser-image-compression": "^1.0.12",
     "firebase": "^7.15.1",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
