--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "browser-image-compression": "^1.0.14",
+    "dotenv": "^8.2.0",
     "firebase": "^7.24.0",
+    "google-spreadsheet": "^3.1.15",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-ga": "^2.7.0",
