--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-scripts": "3.2.0",
     "react-spinners": "^0.6.1",
     "react-youtube": "^7.13.1",
-    "reactstrap": "^8.9.0"
+    "reactstrap": "^8.9.0",
+    "request-promise": "^4.2.6"
   },
   "scripts": {
     "start": "react-scripts start",
