Change to moment for correct timezone

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "dotenv": "^8.2.0",
     "firebase": "^7.24.0",
     "google-spreadsheet": "^3.1.15",
+    "moment-timezone": "^0.5.33",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-ga": "^2.7.0",
