--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "firebase": "^7.24.0",
     "google-spreadsheet": "^3.1.15",
     "moment-timezone": "^0.5.33",
+    "nodemailer": "^6.5.0",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-ga": "^2.7.0",
