--- a/package.json
+++ b/package.json
@@ -18,13 +18,15 @@
     "react-reveal": "^1.2.2",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.2.0",
     "react-slick": "^0.28.1",
     "react-spinners": "^0.6.1",
     "react-youtube": "^7.13.1",
     "reactstrap": "^8.9.0",
     "request-promise": "^4.2.6",
     "slick-carousel": "^1.8.1"
+  },
+  "devDependencies": {
+    "react-scripts": "4.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
