--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "moment-timezone": "^0.5.33",
     "nodemailer": "^6.5.0",
     "react": "^16.14.0",
+    "react-countdown": "^2.3.2",
     "react-dom": "^16.14.0",
     "react-ga": "^2.7.0",
     "react-google-recaptcha": "^2.1.0",
