--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "react-dom": "^16.14.0",
     "react-ga": "^2.7.0",
     "react-google-recaptcha": "^2.1.0",
-    "react-modal-image": "^2.5.0",
+    "react-image-lightbox": "^5.1.4",
     "react-reveal": "^1.2.2",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
