--- a/package.json
+++ b/package.json
@@ -3,31 +3,26 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "axios": "^0.21.1",
+    "@emotion/react": "^11.11.4",
     "bootstrap": "^4.6.0",
-    "browser-image-compression": "^1.0.14",
     "dotenv": "^8.2.0",
     "firebase": "^9.6.6",
-    "google-spreadsheet": "^3.1.15",
+    "google-spreadsheet": "^4.1.1",
     "moment-timezone": "^0.5.34",
     "nodemailer": "^6.5.0",
-    "react": "^16.14.0",
-    "react-dom": "^16.14.0",
-    "react-ga": "^2.7.0",
-    "react-google-recaptcha": "^2.1.0",
-    "react-image-lightbox": "^5.1.4",
-    "react-reveal": "^1.2.2",
+    "react": "^18.2.0",
+    "react-awesome-reveal": "^4.2.8",
+    "react-dom": "^18.2.0",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
-    "react-slick": "^0.28.1",
-    "react-spinners": "^0.6.1",
-    "react-youtube": "^7.13.1",
-    "reactstrap": "^8.9.0",
-    "request-promise": "^4.2.6",
+    "react-slick": "^0.30.2",
+    "react-spinners": "^0.13.8",
+    "react-youtube": "^10.1.0",
+    "reactstrap": "^9.2.2",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
-    "react-scripts": "4.0.3"
+    "react-scripts": "^5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
