--- a/package.json
+++ b/package.json
@@ -4,15 +4,18 @@
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.11.4",
+    "axios": "^1.6.8",
     "bootstrap": "^4.6.0",
     "dotenv": "^8.2.0",
     "firebase": "^9.6.6",
+    "google-auth-library": "^9.7.0",
     "google-spreadsheet": "^4.1.1",
     "moment-timezone": "^0.5.34",
     "nodemailer": "^6.5.0",
     "react": "^18.2.0",
     "react-awesome-reveal": "^4.2.8",
     "react-dom": "^18.2.0",
+    "react-medium-image-zoom": "^5.1.10",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-slick": "^0.30.2",
