--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "react-slick": "^0.30.2",
     "react-spinners": "^0.13.8",
     "react-youtube": "^10.1.0",
-    "reactstrap": "^9.2.2",
+    "reactstrap": "8.9.0",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
