--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "react": "^18.2.0",
     "react-awesome-reveal": "^4.2.8",
     "react-dom": "^18.2.0",
-    "react-medium-image-zoom": "^5.1.10",
+    "react-image-gallery": "^1.3.0",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-slick": "^0.30.2",
