--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "firebase": "^9.6.6",
     "google-auth-library": "^9.7.0",
     "google-spreadsheet": "^4.1.1",
-    "moment-timezone": "^0.5.34",
+    "moment-timezone": "0.5.45",
     "nodemailer": "^6.5.0",
     "react": "^18.2.0",
     "react-awesome-reveal": "^4.2.8",
@@ -22,8 +22,7 @@
     "react-spinners": "^0.13.8",
     "react-youtube": "^10.1.0",
     "reactstrap": "8.9.0",
-    "slick-carousel": "^1.8.1"
-  },
+    "slick-carousel": "^1.8.1"  },
   "devDependencies": {
     "react-scripts": "^5.0.1"
   },
