--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
     "react-spinners": "^0.13.8",
     "react-youtube": "^10.1.0",
     "reactstrap": "8.9.0",
-    "slick-carousel": "^1.8.1"
-  },
+    "slick-carousel": "^1.8.1"  },
   "devDependencies": {
     "react-scripts": "^5.0.1"
   },
