--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@contentful/rich-text-from-markdown": "^15.18.10",
+    "@contentful/rich-text-react-renderer": "^15.22.11",
     "@emotion/react": "^11.11.4",
     "axios": "^1.6.8",
     "bootstrap": "^4.6.0",
+    "contentful": "^11.1.4",
     "dotenv": "^8.2.0",
     "firebase": "^9.6.6",
     "google-auth-library": "^9.7.0",
@@ -22,7 +25,8 @@
     "react-spinners": "^0.13.8",
     "react-youtube": "^10.1.0",
     "reactstrap": "8.9.0",
-    "slick-carousel": "^1.8.1"  },
+    "slick-carousel": "^1.8.1"
+  },
   "devDependencies": {
     "react-scripts": "^5.0.1"
   },
