--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "react-awesome-reveal": "^4.2.8",
     "react-dom": "^18.2.0",
     "react-image-gallery": "^1.3.0",
-    "react-router": "^5.2.0",
-    "react-router-dom": "^5.2.0",
+    "react-router": "^6.27.0",
+    "react-router-dom": "^6.27.0",
     "react-slick": "^0.30.2",
     "react-spinners": "^0.13.8",
     "react-youtube": "^10.1.0",
@@ -51,6 +51,8 @@
   "devDependencies": {
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
+    "@types/react-image-gallery": "^1.2.4",
+    "@types/react-router-dom": "^5.3.3",
     "typescript": "^5.6.3"
   }
 }
