--- a/package.json
+++ b/package.json
@@ -53,6 +53,8 @@
     "@types/react-dom": "^18.3.1",
     "@types/react-image-gallery": "^1.2.4",
     "@types/react-router-dom": "^5.3.3",
-    "typescript": "^5.6.3"
+    "@types/react-slick": "^0.23.13",
+    "typescript": "^5.6.3",
+    "vite-plugin-pwa": "^0.20.5"
   }
 }
