--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@contentful/rich-text-react-renderer": "^15.22.11",
     "@emotion/react": "^11.11.4",
     "@netlify/functions": "^2.8.2",
+    "@types/styled-components": "^5.1.34",
     "@vitejs/plugin-react": "^4.3.3",
     "axios": "^1.6.8",
     "bootstrap": "^4.6.0",
@@ -25,9 +26,9 @@
     "react-router-dom": "^6.27.0",
     "react-slick": "^0.30.2",
     "react-spinners": "^0.13.8",
-    "react-youtube": "^10.1.0",
     "reactstrap": "8.9.0",
     "slick-carousel": "^1.8.1",
+    "styled-components": "^6.1.13",
     "vite": "^5.4.10",
     "vite-tsconfig-paths": "^5.0.1"
   },
@@ -58,6 +59,8 @@
     "@types/react-image-gallery": "^1.2.4",
     "@types/react-router-dom": "^5.3.3",
     "@types/react-slick": "^0.23.13",
+    "cf-content-types-generator": "^2.15.5",
+    "contentful-management": "^11.36.2",
     "typescript": "^5.6.3",
     "vite-plugin-pwa": "^0.20.5"
   }
