--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "google-auth-library": "^9.7.0",
     "google-spreadsheet": "^4.1.1",
     "moment-timezone": "0.5.45",
+    "ngrok": "^5.0.0-beta.2",
     "nodemailer": "^6.5.0",
     "react": "^18.2.0",
     "react-awesome-reveal": "^4.2.8",
