--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@contentful/rich-text-react-renderer": "^15.22.11",
     "@emotion/react": "^11.11.4",
     "@netlify/functions": "^2.8.2",
+    "@stripe/stripe-js": "^4.9.0",
     "@types/styled-components": "^5.1.34",
     "@vitejs/plugin-react": "^4.3.3",
     "axios": "^1.6.8",
@@ -17,6 +18,7 @@
     "google-auth-library": "^9.7.0",
     "google-spreadsheet": "^4.1.1",
     "moment-timezone": "0.5.45",
+    "ngrok": "^5.0.0-beta.2",
     "nodemailer": "^6.5.0",
     "react": "^18.2.0",
     "react-awesome-reveal": "^4.2.8",
@@ -26,10 +28,11 @@
     "react-router-dom": "^6.27.0",
     "react-slick": "^0.30.2",
     "react-spinners": "^0.13.8",
+    "stripe": "^17.3.1",
+    "react-stripe-js": "^1.1.5",
     "reactstrap": "8.9.0",
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.13",
-    "vite": "^5.4.10",
     "vite-tsconfig-paths": "^5.0.1"
   },
   "scripts": {
@@ -62,6 +65,7 @@
     "cf-content-types-generator": "^2.15.5",
     "contentful-management": "^11.36.2",
     "typescript": "^5.6.3",
+    "vite": "^5.4.10",
     "vite-plugin-pwa": "^0.20.5"
   }
 }
