--- a/package.json
+++ b/package.json
@@ -24,14 +24,15 @@
     "react-awesome-reveal": "^4.2.8",
     "react-dom": "^18.2.0",
     "react-image-gallery": "^1.3.0",
+    "react-responsive": "^10.0.0",
     "react-router": "^6.27.0",
     "react-router-dom": "^6.27.0",
     "react-slick": "^0.30.2",
     "react-spinners": "^0.13.8",
-    "stripe": "^17.3.1",
     "react-stripe-js": "^1.1.5",
     "reactstrap": "8.9.0",
     "slick-carousel": "^1.8.1",
+    "stripe": "^17.3.1",
     "styled-components": "^6.1.13",
     "vite-tsconfig-paths": "^5.0.1"
   },
