--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
   "scripts": {
     "start": "vite",
     "build": "tsc && vite build",
-    "serve": "vite preview"
+    "serve": "vite preview",
+    "test": "jest"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -57,14 +58,22 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.0.1",
     "@types/nodemailer": "^6.4.16",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@types/react-image-gallery": "^1.2.4",
     "@types/react-router-dom": "^5.3.3",
     "@types/react-slick": "^0.23.13",
+    "babel-jest": "^29.7.0",
     "cf-content-types-generator": "^2.15.5",
     "contentful-management": "^11.36.2",
+    "jest": "^29.7.0",
+    "ts-node": "^10.9.2",
+    "@types/jest": "^29.5.14",
+    "jest-environment-jsdom": "^29.7.0",
+    "ts-jest": "^29.2.5",
     "typescript": "^5.6.3",
     "vite": "^5.4.10",
     "vite-plugin-pwa": "^0.20.5"
