--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "reactstrap": "8.9.0",
     "slick-carousel": "^1.8.1",
     "stripe": "^17.3.1",
+    "stripe-cli": "^0.1.0",
     "styled-components": "^6.1.13",
     "vite-tsconfig-paths": "^5.0.1"
   },
@@ -60,6 +61,7 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.0.1",
+    "@types/jest": "^29.5.14",
     "@types/nodemailer": "^6.4.16",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
@@ -70,10 +72,9 @@
     "cf-content-types-generator": "^2.15.5",
     "contentful-management": "^11.36.2",
     "jest": "^29.7.0",
-    "ts-node": "^10.9.2",
-    "@types/jest": "^29.5.14",
     "jest-environment-jsdom": "^29.7.0",
     "ts-jest": "^29.2.5",
+    "ts-node": "^10.9.2",
     "typescript": "^5.6.3",
     "vite": "^5.4.10",
     "vite-plugin-pwa": "^0.20.5"
