Update netlify toml cache and home text

--- a/netlify.toml
+++ b/netlify.toml
@@ -2,3 +2,13 @@
   framework = "vite"
 [functions]
   included_files = ["./netlify/functions/stripe-webhook/assets/**"]
+
+[[headers]]
+  for = "/*"
+  [headers.values]
+    Cache-Control = "no-cache"
+
+[[headers]]
+  for = "/assets/*"
+  [headers.values]
+    Cache-Control = "max-age=31536000, immutable"
