--- a/package.json
+++ b/package.json
@@ -75,7 +75,6 @@
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.3",
-    "vite": "^5.4.10",
-    "vite-plugin-pwa": "^0.20.5"
+    "vite": "^5.4.10"
   }
 }
