--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-awesome-reveal": "^4.2.8",
     "react-dom": "^18.2.0",
     "react-image-gallery": "^1.3.0",
+    "react-microsoft-clarity": "^2.0.0",
     "react-responsive": "^10.0.0",
     "react-router": "^6.27.0",
     "react-router-dom": "^6.27.0",
