--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "firebase": "^9.6.6",
     "google-auth-library": "^9.7.0",
     "google-spreadsheet": "^4.1.1",
+    "joi": "^17.13.3",
     "moment-timezone": "0.5.45",
     "ngrok": "^5.0.0-beta.2",
     "nodemailer": "^6.5.0",
