--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-slick": "^0.30.2",
     "react-spinners": "^0.13.8",
     "react-stripe-js": "^1.1.5",
+    "react-toastify": "^11.0.3",
     "reactstrap": "8.9.0",
     "slick-carousel": "^1.8.1",
     "stripe": "^17.3.1",
